--- a/index.html
+++ b/index.html
@@ -15,23 +15,30 @@
 
 <body>
 
-    <section id="navigation">
+    <header>
 
         <div class="wrapper">
-
             <div class="logo">
                 <img src="billeder/logo.png" alt="logo">
             </div>
-
             <div class="menu">
-                <a href="index.html">Portfolio</a>
-                <a href="cv.html">CV</a>
-                <a href="kontakt.html">Kontakt</a>
+                <div class="menubutton">
+                    <div class="bar bar1"></div>
+                    <div class="bar bar2"></div>
+                    <div class="bar bar3"></div>
+                </div>
             </div>
-
         </div>
 
-    </section>
+        <nav class="hidden">
+            <a href="#portfolio">Portfolio</a>
+            <br>
+            <a href="cv.html">CV</a>
+            <br>
+            <a href="kontakt.html">Kontakt</a>
+        </nav>
+
+    </header>
 
     <section id="desktop">
 
@@ -94,27 +101,6 @@
                 </div>
             </a>
         </div>
-
-        <!--
-        <div class="box1">
-            <a href="http://miepoulsen.dk/kea/04-ux/joe" class="overlay">
-                <div class="indhold">
-                    <h1>Joe & The Juice</h1>
-                </div>
-            </a>
-            <div class="content" class="visible"><img src="billeder/projekt1.jpg" alt="Projekt 1"></div>
-        </div>
-
-        <div class="box2">
-            <a href="http://miepoulsen.dk/kea/04-ux/joe" class="overlay">
-                <div class="indhold">
-                    <h1>Joe & The Juice</h1>
-                </div>
-            </a>
-            <div class="content" class="visible"><img src="billeder/projekt1.jpg" alt="Projekt 1"></div>
-        </div>
--->
-
 
     </section>
 
