--- a/index.html
+++ b/index.html
@@ -48,58 +48,62 @@
 
         <h1>Portfolio</h1>
 
-        <div class="container">
-            <img src="billeder/projekt1.jpg" alt="Projekt 1" class="image">
-            <a href="http://miepoulsen.dk/kea/04-ux/joe/" class="overlay">
-                <div class="text">
-                    <h2>Joe & The Juice</h2>
-                </div>
-            </a>
-        </div>
+        <div class="portfolio">
 
-        <div class="container">
-            <img src="billeder/projekt2.jpg" alt="Projekt 2" class="image">
-            <a href="http://www.miepoulsen.dk/kea/04-ux/01-bruger/keaapp.html" class="overlay">
-                <div class="text">
-                    <h2>KEA App</h2>
-                </div>
-            </a>
-        </div>
+            <div class="container">
+                <img src="billeder/projekt1.jpg" alt="Projekt 1" class="image">
+                <a href="http://miepoulsen.dk/kea/04-ux/joe/" class="overlay">
+                    <div class="text">
+                        <h2>Joe & The Juice</h2>
+                    </div>
+                </a>
+            </div>
 
-        <div class="container">
-            <img src="billeder/projekt3.jpg" alt="Projekt 3" class="image">
-            <a href="http://miepoulsen.dk/kea/02-animation/projekt/animation.html" class="overlay">
-                <div class="text">
-                    <h2>Animation</h2>
-                </div>
-            </a>
-        </div>
+            <div class="container">
+                <img src="billeder/projekt2.jpg" alt="Projekt 2" class="image">
+                <a href="http://www.miepoulsen.dk/kea/04-ux/01-bruger/keaapp.html" class="overlay">
+                    <div class="text">
+                        <h2>KEA App</h2>
+                    </div>
+                </a>
+            </div>
 
-        <div class="container">
-            <img src="billeder/projekt4.jpg" alt="Projekt 4" class="image">
-            <a href="http://www.miepoulsen.dk/kea/03-content/03-redesign/docs/index.html" class="overlay">
-                <div class="text">
-                    <h2>Video og redesign</h2>
-                </div>
-            </a>
-        </div>
+            <div class="container">
+                <img src="billeder/projekt3.jpg" alt="Projekt 3" class="image">
+                <a href="http://miepoulsen.dk/kea/02-animation/projekt/animation.html" class="overlay">
+                    <div class="text">
+                        <h2>Animation</h2>
+                    </div>
+                </a>
+            </div>
 
-        <div class="container">
-            <img src="billeder/projekt5.jpg" alt="Projekt 5" class="image">
-            <a href="https://www.youtube.com/watch?v=YYgAsyO4D_w&index=13&list=PLHvG9QDAyDyMINvWebs_SX_PR2DLGOWcV" class="overlay">
-                <div class="text">
-                    <h2>Dokumentar</h2>
-                </div>
-            </a>
-        </div>
+            <div class="container">
+                <img src="billeder/projekt4.jpg" alt="Projekt 4" class="image">
+                <a href="http://www.miepoulsen.dk/kea/03-content/03-redesign/docs/index.html" class="overlay">
+                    <div class="text">
+                        <h2>Video og redesign</h2>
+                    </div>
+                </a>
+            </div>
 
-        <div class="container">
-            <img src="billeder/projekt6.jpg" alt="Projekt 6" class="image">
-            <a href="http://www.miepoulsen.dk/kea/01-web/04-responsive/01_04_04_responsive_v3/index.html" class="overlay">
-                <div class="text">
-                    <h2>Stilartssite</h2>
-                </div>
-            </a>
+            <div class="container">
+                <img src="billeder/projekt5.jpg" alt="Projekt 5" class="image">
+                <a href="https://www.youtube.com/watch?v=YYgAsyO4D_w&index=13&list=PLHvG9QDAyDyMINvWebs_SX_PR2DLGOWcV" class="overlay">
+                    <div class="text">
+                        <h2>Dokumentar</h2>
+                    </div>
+                </a>
+            </div>
+
+            <div class="container">
+                <img src="billeder/projekt6.jpg" alt="Projekt 6" class="image">
+                <a href="http://www.miepoulsen.dk/kea/01-web/04-responsive/01_04_04_responsive_v3/index.html" class="overlay">
+                    <div class="text">
+                        <h2>Stilartssite</h2>
+                    </div>
+                </a>
+            </div>
+
         </div>
 
     </section>
