--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mie Poulsen - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Allura|Montserrat" rel="stylesheet">
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
@@ -15,11 +15,11 @@
 
 <body>
 
-    <header>
+    <section id="topbar">
 
         <div class="wrapper">
             <div class="logo">
-                <img src="billeder/logo.png" alt="logo">
+                <a href="index.html"><img src="billeder/logo.png" alt="logo"></a>
             </div>
             <div class="menu">
                 <div class="menubutton">
@@ -38,7 +38,7 @@
             <a href="kontakt.html">Kontakt</a>
         </nav>
 
-    </header>
+    </section>
 
     <section id="desktop">
 
