--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mie Poulsen - Portfolio</title>
+    <title>Mie Poulsen | Portfolio | Multimediedesigner</title>
     <link rel="stylesheet" href="style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Allura|Montserrat" rel="stylesheet">
@@ -31,7 +31,7 @@
         </div>
 
         <nav class="hidden">
-            <a href="#portfolio">Portfolio</a>
+            <a href="index.html#portfolio">Portfolio</a>
             <br>
             <a href="cv.html">CV</a>
             <br>
@@ -47,6 +47,8 @@
     <section id="portfolio">
 
         <h1>Portfolio</h1>
+
+        <div class="line"></div>
 
         <div class="portfolio">
 
@@ -107,6 +109,12 @@
         </div>
 
     </section>
+
+    <footer>
+
+
+
+    </footer>
 
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
