--- a/kontakt.html
+++ b/kontakt.html
@@ -40,82 +40,86 @@
 
     </section>
 
-    <div class="wrapper">
+    <section id="kontakt">
 
-        <section class="kontakt">
-            <h2>Kontakt</h2>
+        <div class="wrapper">
 
-            <div class="line"></div>
+            <section class="kontakt">
+                <h2>Kontakt</h2>
 
-            <div class="wrapper">
+                <div class="line"></div>
 
-                <div class="icon"><img src="billeder/phone.png" alt="mobilnr"></div>
+                <div class="wrapper">
 
-                <div class="content">
-                    <p>+45 21 64 19 98</p>
-                </div>
+                    <div class="icon"><img src="billeder/phone.png" alt="mobilnr"></div>
 
-            </div>
-
-            <div class="wrapper">
-
-                <div class="icon"><img src="billeder/mail.png" alt="email"></div>
-
-                <div class="content">
-
-                    <p>miepoulsen@live.dk</p>
+                    <div class="content">
+                        <p>+45 21 64 19 98</p>
+                    </div>
 
                 </div>
 
-            </div>
+                <div class="wrapper">
 
-        </section>
+                    <div class="icon"><img src="billeder/mail.png" alt="email"></div>
 
-        <section class="follow">
+                    <div class="content">
 
-            <h2>Følg mig</h2>
+                        <p>miepoulsen@live.dk</p>
 
-            <div class="line"></div>
-
-            <div class="wrapper">
-
-                <div class="icon">
-
-                    <img src="billeder/insta.png" alt="instagram">
+                    </div>
 
                 </div>
 
-                <div class="content">
+            </section>
 
-                    <a href="https://www.instagram.com/miethoruppoulsen/?hl=da" target="_blank">
-                        <p>Instagram</p>
-                    </a>
+            <section class="follow">
+
+                <h2>Følg mig</h2>
+
+                <div class="line"></div>
+
+                <div class="wrapper">
+
+                    <div class="icon">
+
+                        <img src="billeder/insta.png" alt="instagram">
+
+                    </div>
+
+                    <div class="content">
+
+                        <a href="https://www.instagram.com/miethoruppoulsen/?hl=da" target="_blank">
+                            <p>Instagram</p>
+                        </a>
+
+                    </div>
 
                 </div>
 
-            </div>
+                <div class="wrapper">
 
-            <div class="wrapper">
+                    <div class="icon">
 
-                <div class="icon">
+                        <img src="billeder/linkedin.png" alt="linkedin">
 
-                    <img src="billeder/linkedin.png" alt="linkedin">
+                    </div>
+
+                    <div class="content">
+
+                        <a href="https://www.linkedin.com/in/mie-poulsen-00a484141/">
+                            <p>LinkedIn</p>
+                        </a>
+
+                    </div>
 
                 </div>
 
-                <div class="content">
+            </section>
 
-                    <a href="https://www.linkedin.com/in/mie-poulsen-00a484141/">
-                        <p>LinkedIn</p>
-                    </a>
+        </div>
 
-                </div>
-
-            </div>
-
-        </section>
-
-    </div>
+    </section>
 
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
